assets/stylesheets/post.scss
@import "latest_posts";

.tag {
    background-color: $bg-light;
    padding: 6px 12px;
    display: inline-block;
    color: $text-primary;
}

.tag:hover {
    background-color: $bg-medium; 
}

.post-head {
    margin-bottom: 3em;
}

article {
    header {
        margin-bottom: 2em;

        h1 {
            margin-bottom: 0.3em;
        }

        .date {
            margin: 0;
            font-weight: 600;
            font-size: 1em;
            margin-bottom: 8px;
        }
    }

    h2 {
        margin-top: 16px;
    }

    li {
        @include paragraph;
    }

    blockquote {
        padding-left: 16px;
        border-left: 3px solid $bg-light;
    }

    blockquote > p {
        color: $text-ternary;        
    }

    .embed-container, #ytplayer {
        width: 100%;
        height: 400px;
    }

    img {
        width: auto;
        max-width: 100%;
        display: block;
        margin: auto;
    }

    img.inline {
        display: inline;
        width: auto;
    }

    .highlight {
        white-space: pre-wrap;
        white-space: -moz-pre-wrap;
        white-space: -pre-wrap;
        white-space: -o-pre-wrap;
        word-wrap: break-word;
        padding: 8px;

        margin-bottom: 8px;
        border-radius: 4px;
    }
}

.share-twitter {
    margin-top: 2em;
    text-align: center;
}

.tweet {
    background-color: $accent;
    padding: 8px;
    border-radius: 4px;
    height: 24px;

    i, p {
        color: white;
    }

    i {
        line-height: 24px;
        vertical-align: top;
        display: table-cell;
    }

    p {
        margin: auto;
        display: table-cell;
        padding-left: 8px;
    }
}

.tweet:hover {
    text-decoration: none;
    background-color: $accent-hover;
}

@media (max-width: 667px) {
    .tweet:hover {
        background-color: $accent;
    }

    article {
        h1 {
            font-size: 2em;
        }

        .embed-container, #ytplayer {
            height: 200px;
        }
    }
}

